aws-chaos-broker/Latest-Exp-BIntPrvt/terraform/openshift_deployment/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chaos-broker
  labels:
    name: chaos-broker
    app: chaos-broker
