aws-chaos-broker/Latest-Exp-BIntPrvt/terraform/openshift_deployment/manifests/service-handler.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaos-broker-handler
  namespace: chaos-broker
  labels:
    app: chaos-broker
    component: handler
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: chaos-broker
    component: handler
