aws-chaos-broker/Latest-Exp-BIntPrvt/terraform/openshift_deployment/manifests/service-orchestrator.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaos-broker-orchestrator
  namespace: chaos-broker
  labels:
    app: chaos-broker
    component: orchestrator
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: chaos-broker
    component: orchestrator
